bee-common-derive/tests/packable/invalid_id_enum.stderr
error: All variants of an enum that derives `Packable` require a `#[packable(id = ...)]` attribute.
  --> $DIR/invalid_id_enum.rs:12:5
   |
12 |     None,
   |     ^^^^
